--- a/package.json
+++ b/package.json
@@ -23,5 +23,17 @@
     "tailwindcss": "^3.2.6",
     "typescript": "^4.9.3",
     "vite": "^4.1.0"
-  }
+  },
+  "description": "necessary dependencies",
+  "main": "index.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/NewTanachot/DooProject-React.git"
+  },
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/NewTanachot/DooProject-React/issues"
+  },
+  "homepage": "https://github.com/NewTanachot/DooProject-React#readme"
 }
